--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "php": ">=7.1",
     "ext-json": "*",
 
-    "everdreamsoft/crystal-spark-cannon": "dev-baster"
+    "everdreamsoft/crystal-spark-cannon": "dev-master"
   },
 
   "require-dev": {
