--- a/composer.json
+++ b/composer.json
@@ -5,14 +5,14 @@
     "php": ">=7.1",
     "ext-json": "*",
 
-    "everdreamsoft/crystal-spark-cannon": "dev-master"
+    "everdreamsoft/crystal-spark-cannon": "dev-php8"
   },
 
   "require-dev": {
     "phpunit/phpunit": "^4.0 || ^5.0",
     "gossi/php-code-generator": "^0.5.0",
 
-    "everdreamsoft/sandra": "dev-master"
+    "everdreamsoft/sandra": "dev-php8"
   },
 
 
